Update SetupSessionRecommender.java